# Codex-AccMgr

./: .gitignore  LICENSE  QUICKSTART.md  README.md  codex.py  install.ps1  install.sh  pyproject.toml  run.bat  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-request.yml
scripts/: install.py
src/codex_accmgr/: __init__.py  __main__.py  bootstrap.py  constants.py  gui.py
src/codex_accmgr/application/: services.py
src/codex_accmgr/domain/: __init__.py  auth.py  errors.py  models.py
src/codex_accmgr/infrastructure/: accounts.py  desktop.py  mcp_proxy.py  paths.py  shell.py  usage.py
src/codex_accmgr/presentation/: cli.py  gui.py
