[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-accmgr"
version = "1.1.0"
description = "A lightweight CLI and GUI launcher for managing multiple Codex accounts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "lsjlovezz9-afk" }]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]

[project.scripts]
codex-accmgr = "codex_accmgr.__main__:main"

[project.gui-scripts]
codex-accmgr-gui = "codex_accmgr.gui:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
